# isekai-genesis

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deploy-new.ps1  deploy-to-server.ps1  deploy.sh  nginx-card-game.conf  package-lock.json  package.json  server-deploy.sh  setup-ssh-key.ps1
.github/: copilot-instructions.md
client/: .env.development  .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: cl_battle_controller.ts  cl_battle_manager.ts  cl_game.ts  cl_scene_manager.ts  cl_scene_manager_v2.ts  cl_tavern_controller.ts  cl_wasm.ts  main.ts  vite-env.d.ts
client/src/core/: cl_battle_ai.ts  cl_game_mode_manager.ts  cl_game_mode_types.ts  cl_logger.ts  cl_player_progress.ts  index.ts
client/src/network/: cl_auth_service.ts  cl_battle_service.ts  cl_lobby_service.ts  cl_mcp_history.ts  cl_mcp_service.ts  cl_mcp_types.ts  cl_network.ts  cl_network_battle.ts  cl_network_types.ts  cl_progress_sync_service.ts  cl_sync_types.ts  cl_websocket_core.ts  cl_world_sync_service.ts  index.ts
client/src/render/: cl_battle_scene.ts  cl_card_animation.ts  cl_card_material.ts  cl_card_mesh.ts  cl_card_renderer.ts  cl_hand_manager.ts  index.ts
client/src/scenes/: cl_battle_scene_controller.ts  cl_world_scene_controller.ts  handlers.ts  index.ts
client/src/ui/: cl_auth_ui.ts  cl_battle_ui.ts  cl_battle_ui_new.ts  cl_battlefield_ui.ts  cl_bench_ui.ts  cl_card_pool_ui.ts  cl_class_select_ui.ts  cl_game_mode_ui.ts  cl_graveyard_ui.ts  cl_lobby_ui.ts  cl_login_ui.ts  cl_message_ui.ts  cl_target_selector.ts  cl_tavern_arena_ui.ts  cl_tavern_shop_ui.ts  index.ts
crates/game-core/: Cargo.toml
crates/game-core/src/: gc_battle.rs  gc_battle_terrain.rs  gc_battlefield.rs  gc_boss.rs  gc_card.rs  gc_card_acquisition.rs  gc_card_pool.rs  gc_card_templates.rs  gc_combat.rs  gc_economy.rs  gc_effect.rs  gc_equipment.rs  gc_equipment_templates.rs  gc_error.rs  gc_graveyard.rs  gc_map.rs  (+19 more)
crates/game-server/: .env.example  Cargo.toml
crates/game-server/migrations/: 20251224000001_init_player_data.sql  20251225000001_add_users_table.sql  20251225000002_add_player_progress.sql
crates/game-server/src/: gs_auth.rs  gs_config.rs  gs_db.rs  gs_error.rs  gs_mcp.rs  gs_routes.rs  gs_state.rs  gs_websocket.rs  main.rs
crates/game-wasm/: Cargo.toml
crates/game-wasm/src/: gw_battle.rs  gw_boss.rs  gw_bridge.rs  gw_equipment.rs  gw_map.rs  gw_monster.rs  gw_profession.rs  gw_tavern.rs  gw_terrain.rs  gw_utils.rs  lib.rs
文档/: 00-项目总览.md  01-game-core.md  02-game-wasm.md  03-game-server.md  04-client.md  05-命名规范.md  06-API接口.md  07-数据流转.md  08-性能优化.md  09-模块化架构.md  1.md  10-第4阶段Octree.md  11-第5阶段-画质与架构.md  12-MCP-API.md  工作要求文档之一.md  提示词2.md  服务器账号密码.md  游戏王.md  说明文档.md
文档/日志/: README.md
(+94 files in other folders)
