[package]
name = "game-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for card game - exposes game-core to JavaScript"
authors = ["Card Game Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 共享核心逻辑
game-core = { path = "../game-core" }

# WASM 绑定
wasm-bindgen = { workspace = true }

# 序列化 (与 JS 交互)
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# 更好的 panic 信息
console_error_panic_hook = "0.1"

# WASM 日志
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
